--- a/index-masuk.html
+++ b/index-masuk.html
@@ -100,9 +100,9 @@
             <input type="text" name="" id="" placeholder="nominal uang dalam Rp."><br>
             <label for="bayar">bayar dengan metode : </label><br>
             <div>
-              <input type="radio" name="bayar" value="transfer rekening"> Male<br>
-              <input type="radio" name="bayar" value="indoktober"> Female<br>
-              <input type="radio" name="bayar" value="alfaoktober"> Other<br>
+              <input type="radio" name="bayar" value="transfer rekening"> transfer rekening<br>
+              <input type="radio" name="bayar" value="indoktober"> indoktober<br>
+              <input type="radio" name="bayar" value="alfaoktober"> alfaoktober<br>
             </div>
             <button type="button" name="button">TAMBAH</button>
           </form>
