tambah detail beli dikit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <li> <input class="respon" type="text" placeholder="   Cari"> </li>
+                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
                     <a  href="masuk.html"> MASUK</a>
             </div>
             <div class="clear"></div>
@@ -42,8 +42,8 @@
               <a class="respon"href="semua.html">SEMUA KOMIK</a>
               <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
-            <div id="find" style="display:none;"  class="bar">
-              <input class="respon" type="text" placeholder="   Cari">
+            <div id="find" style="display:none"  class="bar">
+              <input class="respon" type="text" placeholder="    Cari">
             </div>
             </ul>
         </nav>
