--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,9 @@
                         <div class="par"><p>Faza Meonk</p><!-- penulis -->
                             <p>Bersambung | 179 Episode</p><!-- ongoing -->
                         </div>
-                        <a href="">Beli</a>
+                        <div class="btn-beli">
+                            <a href="detailBeli.html">Beli</a>
+                        </div>
                     </div>
                 </div>
 
@@ -108,7 +110,6 @@
                         <P>Kemenangan</P>
                     </div>
                 </div>
-
             </div>
 
         <div class="d-kanan">
