--- a/detailBeli.html
+++ b/detailBeli.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="detailBeli.css">
     <title>BACA KOMIK</title>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -50,4 +51,49 @@
         
         <!-- KONTEN -->
 
-    
+    <div class="konten">
+        <div class="atas">
+            <div class="atas-kiri">
+                <p class="jud">Beli komik</p>
+            </div>
+        </div>
+        <div class="a"> <!-- gawe cover komik e -->
+            <div class="a1">
+                <div class="aa1">
+                    <img src="img/si juki-keroyokan118.jpg" alt="">  <!-- cover komik -->
+                </div>
+            </div>
+            <div class="a2">
+                <div class="dul">
+                    <p>Si Juki</p>
+                </div> <!-- gawe judul komik dll -->
+                <div class="par"><p>Faza Meonk</p><!-- penulis -->
+                    <p>Bersambung | 179 Episode</p><!-- ongoing -->
+                </div>
+            </div>
+        </div>
+        <div class="c"> <!-- gawe tulisan chapter e-->
+            <h3>Episode</h3>
+            <div class="cc">
+                <p>Episode 179</p>
+                <p>|</p>
+                <P>Keroyokan</P>
+            </div>
+            <div class="cc">
+                <p>Episode 178</p>
+                <p>|</p>
+                <P>Cari kerja</P>
+            </div>
+            <div class="cc">
+                <p>Episode 176</p>
+                <p>|</p>
+                <P>Kemenangan</P>
+            </div>
+            <div class="cc">
+                <p>Episode 176</p>
+                <p>|</p>
+                <P>Kemenangan</P>
+            </div>
+        </div>
+
+    </div>
