--- a/masuk.html
+++ b/masuk.html
@@ -52,10 +52,10 @@
     <div class="konten masuk">
       <form action="">
         <h1>MASUK</h1>
-        <input type="email" name="" id="myemail" placeholder="Email"><br>
+        <input onkeyup="validasi();" type="email" name="" id="myemail" placeholder="Email"><br>
         <p style="display:none;color:red;" id="email">*email tidak boleh kosong</p>
         <p style="display:none;color:red;" id="email1">*email salah</p>
-        <input type="password" name="" id="mypass" placeholder="Kata sandi"><br>
+        <input onkeyup="validasi();" type="password" name="" id="mypass" placeholder="Kata sandi"><br>
         <p style="display:none;color:red;" id="pass">*password tidak boleh kosong</p>
                 <button type="button" name="button" onclick="validasi();">Masuk</button> <br>
         <a href="daftar1.html"><u>Belum punya akun?</u></a>
