perbaiki js masuk dan daftar

--- a/daftar1.html
+++ b/daftar1.html
@@ -52,9 +52,9 @@
     <div class="konten">
       <form action="">
         <h1>DAFTAR</h1> <br>
-        <input type="email" placeholder="Masukkan email anda..." id="mymail"><br>
+        <input onkeyup="validasi();" type="email" placeholder="Masukkan email anda..." id="mymail"><br>
         <p style="display:none;color:red;" id="email">*masukan email</p>
-        <button type="button" name="button" onclick="validasi();">Lanjutkan</button>
+        <button type="button" name="button" onclick="lanjut();">Lanjutkan</button>
       </form>
     </div>
 
