--- a/masuk.html
+++ b/masuk.html
@@ -57,7 +57,7 @@
         <p style="display:none;color:red;" id="email1">*email salah</p>
         <input onkeyup="validasi();" type="password" name="" id="mypass" placeholder="Kata sandi"><br>
         <p style="display:none;color:red;" id="pass">*password tidak boleh kosong</p>
-                <button type="button" name="button" onclick="validasi();">Masuk</button> <br>
+                <button type="button" name="button" onclick="lanjut();">Masuk</button> <br>
         <a href="daftar1.html"><u>Belum punya akun?</u></a>
       </form>
     </div>
