--- a/index-masuk.html
+++ b/index-masuk.html
@@ -19,22 +19,20 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-        <nav class="topnav" id="myTopnav">
-            <ul>
-                <div class="kiri">
-                    <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
-                    </li>
-                    <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-                    <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
-                    <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
-                    <li><a class="respon" href="terbaru.html">TERBARU</a></li>
-                </div>
+    <nav class="topnav" id="myTopnav">
+        <ul>
+            <div class="kiri">
+                <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a></li>
+                <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
+                <li><a class="respon" href="terbaru.html">TERBARU</a></li>
+            </div>
             <div class="kanan">
-                    <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
-                    </li>
-                    <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-3x" aria-hidden="true" onclick="drop();"></i>
-                    <i class="fa fa-caret-down" aria-hidden="true" onclick="drop();" style="color:#2095F2;" ></i>
-                    <li> <input class="respon" type="text" placeholder="   Cari"> </li>
+                <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a></li>
+                <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-3x" aria-hidden="true" onclick="drop();"></i>
+                <i class="fa fa-caret-down" aria-hidden="true" onclick="drop();" style="color:#2095F2;" ></i>
+                <li> <input class="respon" type="text" placeholder="   Cari"> </li>
 
                 <ul id="dropdown"style="display:none">
                     <li ><a href="" class="biru size18">akun@gmail.com</a></li> <br>
@@ -50,80 +48,80 @@
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
-              <a class="respon"href="index.html" class="active">BERANDA</a>
-              <a class="respon"href="semua.html">SEMUA KOMIK</a>
-              <a class="respon" href="terbaru.html">TERBARU</a>
+                <a class="respon"href="index.html" class="active">BERANDA</a>
+                <a class="respon"href="semua.html">SEMUA KOMIK</a>
+                <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
             <div id="find" style="display:none;"  class="bar">
-              <input class="respon" type="text" placeholder="   Cari">
+                <input class="respon" type="text" placeholder="   Cari">
             </div>
-            </ul>
-        </nav>
+        </ul>
+    </nav>
 
 <!-- modal box -->
 <!-- untuk tambah komik -->
-      <div class="bg-modal" id="tambah" style="display:none;">
+    <div class="bg-modal" id="tambah" style="display:none;">
         <div class="modal-konten">
-          <div class="tutup" onclick="tutup();">+</div>
-          <h1>Tambah komik</h1>
-          <form class="" action="index.html" method="post">
-            <input type="text" name="" id="" placeholder="judul komik"><br>
-            <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
-            <label for="file" style="padding-top:10px;">gambar cover</label> <br>
-            <input type="file" name="file" id="" > <br>
-            <button type="button" name="button">TAMBAH</button>
-          </form>
+            <div class="tutup" onclick="tutup();">+</div>
+            <h1>Tambah komik</h1>
+            <form class="" action="index.html" method="post">
+                <input type="text" name="" id="" placeholder="judul komik"><br>
+                <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
+                <label for="file" style="padding-top:10px;">gambar cover</label> <br>
+                <input type="file" name="file" id="" > <br>
+                <button type="button" name="button">TAMBAH</button>
+            </form>
         </div>
-      </div>
+    </div>
 <!-- untuk verifikasi -->
-      <div class="bg-modal" id="verif" style="display:none;">
+    <div class="bg-modal" id="verif" style="display:none;">
         <div class="modal-konten">
-          <div class="tutup" onclick="tutup();">+</div>
-          <h1>verifikasi identitas kreator</h1>
-          <form class="" action="index.html" method="post">
-            <input type="text" name="" id="" placeholder="nama lengkap"><br>
-            <input type="text" name="" id="" placeholder="no. Telepon/HP"><br>
-            <input type="text" name="" id="" placeholder="alamat"><br>
-            <input type="date" name="" id=""><br>
-            <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
-            <input type="file" name="file" id="" > <br>
-            <button type="button" name="button">verifikasi</button>
-          </form>
+            <div class="tutup" onclick="tutup();">+</div>
+            <h1>verifikasi identitas kreator</h1>
+            <form class="" action="index.html" method="post">
+                <input type="text" name="" id="" placeholder="nama lengkap"><br>
+                <input type="text" name="" id="" placeholder="no. Telepon/HP"><br>
+                <input type="text" name="" id="" placeholder="alamat"><br>
+                <input type="date" name="" id=""><br>
+                <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
+                <input type="file" name="file" id="" > <br>
+                <button type="button" name="button">verifikasi</button>
+            </form>
         </div>
-      </div>
+    </div>
 <!-- untuk tambah uang -->
-      <div class="bg-modal" id="uang" style="display:none;">
+    <div class="bg-modal" id="uang" style="display:none;">
         <div class="modal-konten">
-          <div class="tutup" onclick="tutup();">+</div>
-          <h1>Topup Uang</h1>
-          <form class="" action="index.html" method="post">
-            <input type="text" name="" id="" placeholder="nominal uang dalam Rp."><br>
-            <label for="bayar">bayar dengan metode : </label><br>
-            <div>
-              <input type="radio" name="bayar" value="transfer rekening"> transfer rekening<br>
-              <input type="radio" name="bayar" value="indoktober"> indoktober<br>
-              <input type="radio" name="bayar" value="alfaoktober"> alfaoktober<br>
-            </div>
-            <button type="button" name="button">TAMBAH</button>
-          </form>
+            <div class="tutup" onclick="tutup();">+</div>
+            <h1>Topup Uang</h1>
+            <form class="" action="index.html" method="post">
+                <input type="text" name="" id="" placeholder="nominal uang dalam Rp."><br>
+                <label for="bayar">bayar dengan metode : </label><br>
+                <div>
+                    <input type="radio" name="bayar" value="transfer rekening"> transfer rekening<br>
+                    <input type="radio" name="bayar" value="indoktober"> indoktober<br>
+                    <input type="radio" name="bayar" value="alfaoktober"> alfaoktober<br>
+                </div>
+                <button type="button" name="button">TAMBAH</button>
+            </form>
         </div>
-      </div>
+    </div>
 <!-- untuk edit profil -->
-      <div class="bg-modal" id="profil" style="display:none;">
+    <div class="bg-modal" id="profil" style="display:none;">
         <div class="modal-konten">
-          <div class="tutup" onclick="tutup();">+</div>
-          <h1>Edit Profil</h1>
-          <form class="" action="index.html" method="post">
-            <input type="text" name="" id="" placeholder="nama lengkap"><br>
-            <input type="text" name="" id="" placeholder="no. Telepon/HP"><br>
-            <input type="text" name="" id="" placeholder="alamat"><br>
-            <input type="date" name="" id=""><br>
-            <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
-            <input type="file" name="file" id="" > <br>
-            <button type="button" name="button">verifikasi</button>
-          </form>
+            <div class="tutup" onclick="tutup();">+</div>
+            <h1>Edit Profil</h1>
+            <form class="" action="index.html" method="post">
+                <input type="text" name="" id="" placeholder="nama lengkap"><br>
+                <input type="text" name="" id="" placeholder="no. Telepon/HP"><br>
+                <input type="text" name="" id="" placeholder="alamat"><br>
+                <input type="date" name="" id=""><br>
+                <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
+                <input type="file" name="file" id="" > <br>
+                <button type="button" name="button">verifikasi</button>
+            </form>
         </div>
-      </div>
+    </div>
 
 
 
