--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 </head>
 <body>
-        <nav class="topnav" id="myTopnav">
-            <ul>
-                <div class="kiri">
-                    <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
-                    </li>
-                    <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
-                    <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
-                    <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
-                    <li><a class="respon" href="terbaru.html">TERBARU</a></li>
-                </div>
+    <nav class="topnav" id="myTopnav">
+        <ul>
+            <div class="kiri">
+                <li><a href="javascript:void(0);" class="icon" onclick="bar()"> <i class="fa fa-bars"></i></a>
+                </li>
+                <li><a href="index.html" ><img class="logo" src="img/BACA KOMIK ICON.png" alt=""></a></li>
+                <li><a class="respon"href="index.html" class="active">BERANDA</a> </li>
+                <li><a class="respon"href="semua.html">SEMUA KOMIK</a> </li>
+                <li><a class="respon" href="terbaru.html">TERBARU</a></li>
+            </div>
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
@@ -38,15 +38,15 @@
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
-              <a class="respon"href="index.html" class="active">BERANDA</a>
-              <a class="respon"href="semua.html">SEMUA KOMIK</a>
-              <a class="respon" href="terbaru.html">TERBARU</a>
+                <a class="respon"href="index.html" class="active">BERANDA</a>
+                <a class="respon"href="semua.html">SEMUA KOMIK</a>
+                <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
             <div id="find" style="display:none"  class="bar">
-              <input class="respon" type="text" placeholder="    Cari">
+                <input class="respon" type="text" placeholder="    Cari">
             </div>
-            </ul>
-        </nav>
+        </ul>
+    </nav>
 
         <!-- KONTEN -->
 
@@ -83,49 +83,49 @@
                             </a>
                     </div>
                     <div class="cover1">
-                            <a href="detail.html">
-                                <img src="img/si nopal142.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Si Nopal</p>
-                                    <p class="episode">Episode 179</p>
-                                </div>
-                            </a>
+                        <a href="detail.html">
+                            <img src="img/si nopal142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Si Nopal</p>
+                                <p class="episode">Episode 179</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="cover1">
-                            <a href="detail.html">
-                                <img src="img/garudayana142.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Garudayana</p>
-                                    <p class="episode">Episode 19</p>
-                                </div>
-                            </a>
+                        <a href="detail.html">
+                            <img src="img/garudayana142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Garudayana</p>
+                                <p class="episode">Episode 19</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="cover1">
-                            <a href="detail.html">
-                                <img src="img/dalang pelo142.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Dalang Pelo</p>
-                                    <p class="episode">Episode 17</p>
-                                </div>
-                            </a>
+                        <a href="detail.html">
+                            <img src="img/dalang pelo142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Dalang Pelo</p>
+                                <p class="episode">Episode 17</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="cover1">
-                            <a href="detail.html">
-                                <img src="img/garudayana142.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Garudayana</p>
-                                    <p class="episode">Episode 19</p>
-                                </div>
-                            </a>
+                        <a href="detail.html">
+                            <img src="img/garudayana142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Garudayana</p>
+                                <p class="episode">Episode 19</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="cover1">
-                            <a href="detail.html">
-                                <img src="img/dalang pelo142.jpg" alt="cover" >
-                                <div>
-                                    <p class="judul">Dalang Pelo</p>
-                                    <p class="episode">Episode 17</p>
-                                </div>
-                            </a>
+                        <a href="detail.html">
+                            <img src="img/dalang pelo142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Dalang Pelo</p>
+                                <p class="episode">Episode 17</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -263,10 +263,17 @@
                                 <li><a href="">Komedi</a></li>
                                 <li><a href="">Petualangan</a></li>
                             </ul>
+                            <ul id="banyak">
+                                <li><a href="">Aksi</a></li>
+                                <li><a href="">Drama</a></li>
+                                <li><a href="">Horor</a></li>
+                                <li><a href="">Komedi</a></li>
+                                <li><a href="">Petualangan</a></li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="btn-banyak">
-                        <a href="">Tampilkan lebih banyak</a>
+                    <div class="btn-banyak" href="javascript:void(0);" onclick="show()">
+                        <a href="javascript:void(0);" onclick="show()">Tampilkan lebih banyak</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
                 </div>
