--- a/index.html
+++ b/index.html
@@ -348,5 +348,6 @@
     <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/lebihBanyak.js"></script>
   </body>
 </html>
