--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </div>
                         <div class="column">
                             <div class="card">
-                                <a href=""><p class="episode">Episode 179</p></a>
+                                <a href="view.html"><p class="episode">Episode 179</p></a>
                             </div>
                         </div>
                         <div class="column">
