update detail.html dan tambah halaman detail-masuk

--- a/detail.html
+++ b/detail.html
@@ -44,20 +44,13 @@
             </div>
         </ul>
     </nav>
-
+    
     <div class="bg-modal" id="beli" style="display: none">
-        <div class="modal-konten">
+        <div class="pop-konten">
             <div class="tutup" onclick="tutup();">+</div>
-            <h1>Beli</h1>
-            <form class="" action="" method="post">
-                <input type="text" name="" id="" placeholder="nama lengkap"><br>
-                <input type="text" name="" id="" placeholder="no. Telepon/HP"><br>
-                <input type="text" name="" id="" placeholder="alamat"><br>
-                <input type="date" name="" id=""><br>
-                <label for="file" style="padding-top:10px;">foto selfie dengan ktp</label> <br>
-                <input type="file" name="file" id="" > <br>
-                <button type="button" name="button">verifikasi</button>
-            </form>
+            <h1>Perhatian</h1>
+            <p>ANDA HARUS MASUK TERLEBIH DAHULU SEBELUM MEMBELI !</p>
+            <a href="masuk.html" class="btn-masuk"> MASUK</a>
         </div>
     </div>
     
@@ -96,8 +89,8 @@
                         <li id="banyak" style="display: none;">Genre    : Komedi</li>
                     </ul>
                 </div>
-                <div class="btn-banyak" href="javascript:void(0);" onclick="show()">
-                    <a href="">Tampilkan lebih banyak</a>
+                <div class="btn-banyak" onclick="show()">
+                    <a href="javascript:void(0)">Tampilkan lebih banyak</a>
                     <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </div>
             </div>
