--- a/index-masuk.html
+++ b/index-masuk.html
@@ -142,7 +142,7 @@
                 <div class="tengah">
                     <div class="cover1">
                         <div>
-                            <a href="detail.html">
+                            <a href="detail-masuk.html">
                                 <img src="img/si abi142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Abi</p>
