--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <li><a href="">Komedi</a></li>
                                 <li><a href="">Petualangan</a></li>
                             </ul>
-                            <ul id="banyak">
+                            <ul id="banyak" style="display: none;">
                                 <li><a href="">Aksi</a></li>
                                 <li><a href="">Drama</a></li>
                                 <li><a href="">Horor</a></li>
@@ -272,8 +272,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="btn-banyak" href="javascript:void(0);" onclick="show()">
-                        <a href="javascript:void(0);" onclick="show()">Tampilkan lebih banyak</a>
+                    <div class="btn-banyak" onclick="show()">
+                        <a href="javascript:void(0)">Tampilkan lebih banyak</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
                 </div>
